# test_excel_parsing

./: README.md  TASK.md  docker-compose.yml  nginx.conf
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  init_db.py  pyproject.toml  setup.cfg
backend/app/: api.py  main.py  models.py  schemas.py  security.py  tasks.py
backend/app/core/: config.py
backend/app/core/settings/: app.py  development.py  test.py
backend/app/db/: session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: af015e38afb4_init_db.py
frontend/: .env  Dockerfile  package.json
frontend/src/: index.tsx
frontend/src/components/App/: App.tsx
frontend/src/components/Processing/: FileList.tsx  Processing.tsx  UploadFile.tsx
frontend/src/components/SignIn/: SignIn.tsx
frontend/src/services/: auth.service.ts  header.ts  http.ts  processing.service.ts
