[tool.poetry]
name = "test_excel_parsing"
version = "0.1.0"
description = ""
authors = ["Aleksandr Zorin"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.73.0"
uvicorn = {extras = ["standard"], version = "^0.17.1"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
loguru = "^0.6.0"
python-multipart = "^0.0.5"
SQLAlchemy = "^1.4.31"
alembic = "^1.7.6"
aiofiles = "^0.8.0"
pandas = "^1.4.0"
openpyxl = "^3.0.9"
xlrd = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
